manifests/database/mariadb/overlays/home/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mariadb
  namespace: mariadb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb-galera
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "3306"
            - port: "4567"
    - fromEndpoints:
        - matchLabels:
            mariadb-client: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "3306"
    - fromEndpoints:
        - {}
  egress:
    - toEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "4567"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            mariadb-client: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "3306"
    - toCIDRSet:
        - cidr: 192.168.1.3/32
        - cidr: 192.18.153.11/32
      toPorts:
        - ports:
            - port: "3306"
    - toEndpoints:
        - {}
